--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -1,6 +1,6 @@
 .advantages__container {
-  padding-right: 35px;
-  padding-left: 35px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   @media screen and (min-width: 768px) {
     padding-left: 70px;
@@ -14,10 +14,14 @@
 }
 
 .advantages__item {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
-    gap: 128px;
+    gap: 65px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -28,36 +32,38 @@
 .advantages__img {
   border-radius: 50px;
   margin-bottom: 25px;
+  width: 200px;
+  height: 180px;
 
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     margin-bottom: 15px;
-
+    width: 250px;
+    height: 220px;
   }
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 25px;
+    width: 370px;
+    height: 310px;
   }
-
 }
 
 .advantages__text {
   font-size: 10px;
   line-height: calc(20 / 10);
-  text-align: center;
+  
   text-transform: uppercase;
 
-  @media screen and (min-width: 768px){
-  font-size: 12px;
-  line-height: calc(24 / 12);
-  text-align: start;
-
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+    line-height: calc(24 / 12);
+    text-align: start;
   }
 
-  @media screen and (min-width: 1200px){
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
     line-height: calc(32 / 16);
   }
-
-
 }
 
 .text--light {
