--- a/scss/base/_card-set.scss
+++ b/scss/base/_card-set.scss
@@ -2,11 +2,23 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     gap: var(--indent);
 
-    @media screen and (min-width:768px){
+   /* @media screen and (min-width:768px){
     justify-content: flex-start;   
     }
+    */
+   
+
+    @media screen and (min-width:768px){
+        --indent: 50px;
+    }
+
+    @media screen and (min-width:1200px){
+        --indent: 100px;
+    }
+
 }
 
 .card-set-item {
