--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
   /* bg colors */
   --bg-img: url(../images/base/bg.jpg);
   /* others */
-  --indent: 160px;
+  --indent: 15px;
   --itens: 2;
 }
 
@@ -77,6 +77,32 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: var(--indent);
+  /* @media screen and (min-width:768px){
+   justify-content: flex-start;   
+   }
+   */
+}
+@media screen and (min-width: 768px) {
+  .card-set {
+    --indent: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card-set {
+    --indent: 100px;
+  }
+}
+
+.card-set-item {
+  flex-basis: calc((100% - var(--indent) * (var(--itens) - 1)) / var(--itens));
 }
 
 .container {
@@ -450,8 +476,8 @@ img {
 }
 
 .advantages__container {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 @media screen and (min-width: 768px) {
   .advantages__container {
@@ -466,29 +492,17 @@ img {
   }
 }
 
-.advantages__item {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-@media screen and (min-width: 768px) {
-  .advantages__item {
-    display: flex;
-    align-items: center;
-    gap: 65px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .advantages__item {
-    gap: 160px;
-  }
-}
-
 .advantages__img {
   border-radius: 50px;
   margin-bottom: 25px;
   width: 200px;
   height: 180px;
+}
+@media screen and (max-width: 479px) {
+  .advantages__img {
+    width: 125px;
+    height: 115px;
+  }
 }
 @media screen and (min-width: 768px) {
   .advantages__img {
