--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,37 +1,75 @@
 .hero {
-    position: relative;
-  
-    background-repeat: no-repeat;
-    background-position: center;
-  
-    width: 1200px;
-    height: 670px;
-    margin-left: auto;
-    margin-right: auto;
-  
+  position: relative;
 
-    &__title {
-    font-family: var(--second-font);
+  background-repeat: no-repeat;
+  background-position: center;
+
+ 
+  height: 350px;
+
+
+  @media screen and (min-width: 768px) {
+  
+    height: 400px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  
+    height: 670px;
+  }
+}
+
+.hero__title {
+  font-family: var(--second-font);
+  font-size: 12px;
+  line-height: calc(24 / 12);
+  color: var(--main-txt-cl);
+  text-align: center;
+
+  margin-top: 20px;
+  margin-bottom: 250px;
+  margin-left: 20px;
+  margin-right: 190px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    line-height: calc(40 / 20);
+
+    margin-top: 35px;
+    margin-bottom: 285px;
+    margin-left: 35px;
+    margin-right: 538px;
+  }
+
+  @media screen and (min-width: 1200px) {
     font-size: 36px;
     line-height: calc(72 / 36);
-    color: var(--main-txt-cl);
-    text-align: center;
 
     margin-top: 50px;
     margin-bottom: 400px;
     margin-left: 50px;
     margin-right: 755px;
   }
-  
+}
 
-    &__subtitle {
-    font-family: var(--second-font);
+.hero__subtitle {
+  font-family: var(--second-font);
+  font-size: 12px;
+  line-height: calc(12 / 12);
+  color: var(--accent-txt-cl);
+  text-align: center;
+
+  margin-left: 175px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+  line-height: calc(20 / 20);
+  margin-left: 493px;
+  }
+
+  @media screen and (min-width: 1200px) {
     font-size: 36px;
-    line-height: calc(36 / 36);
-    color: var(--accent-txt-cl);
-    text-align: center;
-
-    margin-left: 610px;
-  }  
-
-} 
+  line-height: calc(36 / 36);
+  margin-left: 610px;
+  }
+}
