--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -10,7 +10,7 @@
 
   @media screen and (min-width: 768px) {
   
-    height: 400px;
+    height: 450px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -30,6 +30,11 @@
   margin-bottom: 250px;
   margin-left: 20px;
   margin-right: 190px;
+
+  @media screen and (min-width: 480px){
+    margin-left: 50px;
+    margin-right: 300px;
+  }
 
   @media screen and (min-width: 768px) {
     font-size: 20px;
@@ -60,6 +65,11 @@
   text-align: center;
 
   margin-left: 175px;
+
+  @media screen and (min-width: 480px){
+    margin-left: 300px;
+  } 
+
 
   @media screen and (min-width: 768px) {
     font-size: 20px;
