--- a/scss/components/_slide.scss
+++ b/scss/components/_slide.scss
@@ -1,5 +1,5 @@
 .slide {
-    position: absolute;
+    
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -8,6 +8,27 @@
     transition: opacity 1s ease-in-out;
     transform: translate(-8.05%, -8.05%);
     
+    position: absolute;
+    top: 26px; 
+    left: 38px;
+
+    @media screen and (max-width: 479px) {
+      top: 27px;
+      left: 25px;}
+
+    @media screen and (min-width: 768px) {
+      top: 37px;
+      left: 60px;
+  
+     
+    }
+  
+    @media screen and (min-width: 1200px) {
+      top: 55px; 
+      left: 100px;
+  
+      
+    }
  
   }
   
