--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -85,6 +85,10 @@ position: relative;
   margin-bottom: auto;
 }
 
+.mobile-item{
+  display: block;
+}
+
 .mobile-link {
   font-size: 20px;
   line-height: calc(40 / 20);
@@ -93,6 +97,8 @@ position: relative;
 
   padding-top: 20px;
   padding-bottom: 20px;
+
+  display: block;
   
 
 
