--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -62,7 +62,7 @@ position: relative;
 
   margin-left: auto;
 
-  max-width: 300px;
+  width: 270px;
   height: 100%;
 
   background-color:black;
@@ -87,6 +87,11 @@ position: relative;
 
 .mobile-item{
   display: block;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-txt-cl);
+  }
 }
 
 .mobile-link {
@@ -103,11 +108,9 @@ position: relative;
 
 
 
-  &:hover,
-  &:focus {
-    color: var(--accent-txt-cl);
-  }
 }
+
+
 
 .mobile-phone {
   margin-bottom: 30px;
