--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -62,12 +62,12 @@ position: relative;
 
   margin-left: auto;
 
-  width: 270px;
+  width: 285px;
   height: 100%;
 
   background-color:black;
 
-  padding: 50px 30px;
+  padding: 30px 30px;
 
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
@@ -82,7 +82,7 @@ position: relative;
   display: flex;
   flex-direction: column;
   gap: 25px;
-  margin-bottom: auto;
+  margin-bottom:40px;
 }
 
 .mobile-item{
