--- a/css/main.css
+++ b/css/main.css
@@ -317,10 +317,10 @@ img {
   flex-direction: column;
   align-items: center;
   margin-left: auto;
-  width: 270px;
+  width: 285px;
   height: 100%;
   background-color: black;
-  padding: 50px 30px;
+  padding: 30px 30px;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
@@ -332,7 +332,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 25px;
-  margin-bottom: auto;
+  margin-bottom: 40px;
 }
 
 .mobile-item {
