--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,7 +8,7 @@
   --accent-txt-cl: #fff;
 
   /* bg colors */
-  --bg-img: url(../images/base/bg.jpg);
+  --bg-img: url(../images/base/bg.webp);
 
   /* others */
   --indent: 15px;
