--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   --main-txt-cl: #f19000;
   --accent-txt-cl: #fff;
   /* bg colors */
-  --bg-img: url(../images/base/bg.jpg);
+  --bg-img: url(../images/base/bg.webp);
   /* others */
   --indent: 15px;
   --itens: 2;
